deploy/k8s/processor/base/namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: processor
  # **** Enable OSM at namespace level  
  labels:
    #openservicemesh.io/monitored-by: osm
    app: processor
    kuma.io/sidecar-injection: enabled

  annotations:
    kuma.io/mesh: mymesh
    app: uploader
    # istio-injection: enabled
    # 'openservicemesh.io/sidecar-injection': 'enabled'
    # 'openservicemesh.io/metrics': 'enabled'
