deploy/k8s/processor/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: processor-api
  namespace: processor
spec:
  replicas: 1
  selector:
    matchLabels:
      app: processor-api
  template:
    metadata:
      labels:
        app: processor-api
    spec:
      containers:
      - name: processor-api
        image: rohitrustagi007/evo_processor:64
        startupProbe:
          httpGet:
            path: /health
            port: 80
          failureThreshold: 30
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /healthz
            port: 80
          initialDelaySeconds: 0
          periodSeconds: 10
          timeoutSeconds: 1
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /healthz
            port: 80
          successThreshold: 3
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
