deploy/k8s/processor/base/processor-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: processor-api-deployment
  namespace: evolution
spec:
  replicas: 1
  selector:
    matchLabels:
      app: processor-api
  template:
    metadata:
      labels:
        app: processor-api
    spec:
      containers:
      - name: processor-api
        image: rohitrustagi007/evo_processor:47
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
