deploy/k8s/processor/base/processor-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: processor-api-cluster-ip
  namespace: evolution
  labels:
    app: processor-api
spec:
  type: ClusterIP
  selector:
    app: processor-api
  ports:
  - name: processor-api-port
    protocol: TCP
    port: 80
    targetPort: 80
