deploy/k8s/processor/base/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: processor-gateway
  namespace: processor
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: processor
  namespace: processor
spec:
  hosts:
  - "*"
  gateways:
  - processor-gateway
  http:
  - match:
    - uri:
        prefix: /processor
    route:
    - destination:
        host: processor-api
        port:
          number: 80
