deploy/k8s/processor/base/processor-api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: processor-ingress
  namespace: evolution
  annotations: 
      kubernetes.io/ingress.class: nginx
      nginx.ingress.kubernetes.io/use-regex: 'true'
      nginx.org/mergeable-ingress-type: "minion"
  labels:
    name: processor-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: evolution.k8
    http:
      paths:
      - path: /process
        pathType: Prefix
        backend:
          service:
            name: processor-api-cluster-ip
            port: 
              number: 80
